test/should_fail/NonIntegerEnum2.oj

@enum {
	Foo = 3.1415
}
